--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@popperjs/core": "^2.9.0",
     "angular-bootstrap-md": "^11.0.0",
     "bootstrap": "^4.6.0",
+    "express": "^4.17.1",
     "jquery": "^3.6.0",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "screenfull": "^3.3.0",
     "tslib": "^2.0.0",
